# Chronos

./: CONTRIBUTING.md  Chronos Review_comments.docx  Multi_Camera_MIPI_Sync_Proposal_v3.docx  README.md  proposal_content.md
app/: CMakeLists.txt  README.md
app/src/: chronos_capture.c  chronos_capture.h  demo_app.cpp  sync_test.cpp
docs/: README.md  api_reference.md  architecture.md  user_guide.md
drivers/: README.md  chronos-orin-nx.dts
drivers/chronos_csi/: Makefile  chronos_csi.c
drivers/imu/: Makefile  bmi088_chronos.c
drivers/ov9281/: Kconfig  Makefile  ov9281.c
fpga/: README.md
fpga/constraints/: chronos_pinout.pdc
fpga/rtl/: chronos_pll.sv  chronos_top.sv  config_regs.sv  csi2_rx.sv  csi2_tx.sv  frame_buffer.sv  i2c_slave.sv  trigger_generator.sv  tx_arbiter.sv
hardware/: 01- Power Regulators.SchDoc  01- Title Page.SchDoc  02 - Block Diagram.SchDoc  02 - Power CSI and Bank Power.SchDoc  03- Power Decoupling.SchDoc  04 - Camera Interface.SchDoc  05 - Camera Interface 2.SchDoc  06 - Soft_DPHY.SchDoc  07 - USB Interface.SchDoc  08- Bank2_6_7.SchDoc  09- I2C, LEDs And Push Button.SchDoc  10 - Configuration And ADC.SchDoc  11- IMU.SchDoc  12 - JETSON_CON.SchDoc  Chronos Review.docx  Chronos.OutJob  Chronos.PCBDwf  Chronos.PcbDoc.htm  Chronos.PrjPcb  Chronos.PrjPcbStructure  Chronos.SchLib  Chronos.net  Chronos_System_Requirements_Document.docx  CrossLink-NX-Eval-Brd-Schematic-RevB-191122.OutJob
hardware/3Ds/: BG400C.STEP  HVSOF6_ROM.step  QFN-24_UF_LIT.step  SOD-123_ONS.step  UDFN6_1P2X1_ONS.step
hardware/Project Outputs for Chronos/: Design Rule Check - Chronos.drc  Design Rule Check - Chronos.html
